-Attempting to resolve an issue where running the server through the JAR file in Command Prompt always returns empty responses. Using several logging messages, error handling, and adjusting logic in the StaticFileHandler, HttpServer(main), and Router classes to resolve this issue. It has not been resolved as of 7/19/2025.